--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<header>
-		<div class="container d-flex space-between header__container">
+		<div class="container">
 			
-			<div class="head d-flex space-between">
-<input id="menu__toggle" type="checkbox">
+			<div class="head">
+			<input id="menu__toggle" type="checkbox">
   			<label class="menu__btn" for="menu__toggle">
 
   			  <span></span>
@@ -22,7 +22,7 @@
 				</a>
 				
 				<nav>
-					<ul class="d-flex space-between nav__list">
+					<ul class="nav__list">
 						<li class="nav__item">
 							<a href="#" class="nav__link">Our services</a>
 						</li>
@@ -40,7 +40,7 @@
 						</li>
 					</ul>
 				</nav>
-				<a href="#" class=" btn request">Request a Quote</a>
+				<a href="#" class="btn">Request a Quote</a>
 			</div>
 			<div class="offer">
 				<h1>Professional cleaning
@@ -56,7 +56,7 @@
 					<i class="fas fa-map-marker-alt pin"></i>Locations
 				</a>
 			</div>
-			<a href="#" class="learn d-flex ">
+			<a href="#" class="learn">
 				<p class="learn__text">
 					learn more
 				</p>
@@ -70,5 +70,71 @@
 			</div>
 		</div>
 	</header>
+	<main>
+		<section class="cleaning">
+			<div class="container">
+				<div class="cleaning__item">
+					<div class="cleaning-up">
+						<span class="cleaning__icon icon-house"></span>
+						<h3>
+							House cleaning
+						</h3>
+						<div class="cleaning__text">
+							Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.
+						</div>
+					</div>
+					<a href="#" class="cleaning__btn">Book online now</a>
+				</div>
+				<div class="cleaning__item">
+					<div class="cleaning-up">
+						<span class="cleaning__icon icon-commercial"></span>
+						<h3>
+							Commercial cleaning
+						</h3>
+						<div class="cleaning__text">
+							Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.
+						</div>
+					</div>
+					<a href="$" class="cleaning__btn">Get a quote</a>
+				</div>
+			</div>
+		</section>
+		<section class="way">
+			<div class="container">
+				<h2 class="way__title">A new way of cleaning</h2>
+				<div class="way__content">
+					<div class="way__content__column">
+						<p>We clean to such a high level that you’ll never even need to use our unique re-clean guarantee! <u>This gives you peace of mind and saves you time.</u></p>
+					</div>
+					<div class="way__content__column">
+						<p>We love house cleaning and want to share with you its many benefits. Having our house cleaning services is about having the utmost professional people in your home, people you can trust and count on.</p>
+						<p>When you choose Sparcle, you know you will be coming home with the peace of mind that only all natural cleaning products were used, making your home safe for your family, your pets and the planet.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="become">
+			<div class="container">
+				<div class="become__content">
+					<div class="become__img">
+						<img src="img/become.jpg" alt="" class="become-img">
+					</div>
+					<h4 class="become__title">BECOME PART OF THE TEAM</h4>
+					<h2 class="become__subtitle">Professional cleaning service of the year</h2>
+					<div class="become__text">
+						At <span>Sparcle</span> our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
+					</div>
+					<ul class="become__advantages">
+						<li class="become__advantages__item">
+							Satisfaction guranteed
+						</li>
+						<li class="become__advantages__item">
+							Above average incomes
+						</li>
+					</ul>
+				</div>
+			</>
+		</section>
+	</main>
 </body>
 </html>
