--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</li>
 					</ul>
 				</nav>
-				<a href="#" class="btn">Request a Quote</a>
+				<a href="#" class="btn btn-request">Request a Quote</a>
 			</div>
 			<div class="offer">
 				<h1>Professional cleaning
@@ -49,10 +49,10 @@
 				<p class="offer__text">
 					Enjoy a better house cleaning experience. All of our cleaners are stringently vetted and have their cleaning ability fully tested.
 				</p>
-				<a href="#" class="btn btn_get-started">
+				<a href="#" class="btn get-started-btn">
 					Get started
 				</a>
-				<a href="#" class="btn btn_locations">
+				<a href="#" class="btn locations-btn">
 					<i class="fas fa-map-marker-alt pin"></i>Locations
 				</a>
 			</div>
@@ -136,5 +136,7 @@
 			</>
 		</section>
 	</main>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
