--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							Sparcle provides a professional house cleaning service dedicated to making the lives of our clients safer, greener and cleaner.
 						</div>
 					</div>
-					<a href="$" class="cleaning__btn">Get a quote</a>
+					<a href="#" class="cleaning__btn">Get a quote</a>
 				</div>
 			</div>
 		</section>
@@ -135,6 +135,56 @@
 				</div>
 			</>
 		</section>
+		<form class="book">
+			<div class="container">
+				<div class="book__column">
+					<h4>Select your service</h4>
+					<h2>Book online</h2>
+					<div class="book__text">Choose the type of cleaning that suits you the most. After that you just have to specify number of rooms and you are good to go.</div>
+					<div class="book__type">
+						<div class="type__text">Type of cleaning</div>
+						<div class="type__radio">
+							<input id="residential" name="typeOfCleaning" type="radio" value="residential" checked="checked">
+							<label for="residential">Residential</label>
+							<input id="commercial" name="typeOfCleaning" type="radio" value="commercial">
+							<label for="commercial">Commercial</label>
+						</div>
+					</div>
+					<div class="book__number">
+						<div class="number__item">
+							<div class="number__text">Number of bedrooms</div>
+							<div class="number__input">
+							   <button class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
+	                     <input id="count-bedrooms" name="bedrooms" type="number" min="0" value="1">
+	                     <button class="number__button" type="button" onclick="this.previousElementSibling.stepUp()">+</button>
+							</div>
+						</div>
+						<div class="number__item">
+							<div class="number__text">Number of bathrooms</div>
+							<div class="number__input">
+							   <button id="1"class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
+	                     <input id="count-bathrooms" name="bathrooms" type="number" min="0" value="1">
+	                     <button id="1"class="number__button" type="button" onclick="this.previousElementSibling.stepUp()">+</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="book__column">
+					<div class="book__numbers">
+						<h3 class="book__subtotal">Subtotal<span id="price">60.91</span>$</h3>
+						<div class="book__cleaning"><span id="typeOfCleaning">Residential</span> Cleaning - <span id="timeOfCleaning">2</span> <span id="hours">hours<span></div>
+						<div class="book__includes">includes: <span id="bedrooms">1</span> bedrooms, <span id="bathrooms">1</span> bathrooms</div>
+					</div>
+					<div class="book__user-contacts">
+						<p class="contacts__text">Your full name</p>
+						<input type="text" placeholder="Vid Kraljić Radulović" required>
+						<input type="tel" placeholder="Enter your phone number" required>
+						<input type="email" placeholder="Enter your email addresse" required>
+					</div>
+					<button type="submit" class="book__submit">Continue Booking</button>
+				</div>
+			</div>
+		</form>
 	</main>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/main.js"></script>
