--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</li>
 					</ul>
 				</div>
-			</>
+			</div>
 		</section>
 		<form class="book">
 			<div class="container">
@@ -185,7 +185,123 @@
 				</div>
 			</div>
 		</form>
+
+
+		<section class="feedback">
+			<div class="container">
+				<div class="feedback__title">Your questions and comments are important to us.</div>
+				<div class="feedback__btns">
+					<a href="#" class="btn feedback__btn">Call our service</a>
+					<a href="#" class="btn feedback__btn">Email us</a>
+				</div>
+			</div>
+		</section>
+
 	</main>
+	<footer>
+		<div class="container">
+			<div class="column__container">
+				<div class="footer__column">
+				<h2 class="footer__column__title"><a href="#" class="footer__title__link">Sparcle.</a></h2>
+				<ul class="footer__column__content no-animate">
+					<li class="footer__item without-link">
+						Enjoy a better cleaning
+					</li>
+					<li class="footer__item without-link">
+						experience with us.
+					</li>
+					<li class="footer__item footer__item_social">
+						<ul class="social">
+							<li><a href="social__link"><img src="img/f.png" alt=""></a></li>
+							<li><a href="social__link"><img src="img/t.png" alt=""></a></li>
+							<li><a href="social__link"><img src="img/in.png" alt=""></a></li>
+						</ul>
+					</li>
+				</ul>
+				</div>
+				<div class="footer__column">
+				<h6 class="footer__column__title">
+						House
+				</h6>
+				<ul class="footer__column__content">
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							What’s Included
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Speciality Cleaning
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Deep Cleaning
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Careers
+						</a>
+					</li>
+				</ul>
+				</div>
+				<div class="footer__column">
+				<h6 class="footer__column__title">
+						Commercial
+				</h6>
+				<ul class="footer__column__content">
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Green Cleaning
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Secure Daytime Cleaning
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Apartment Cleaning
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							Event Cleaning
+						</a>
+					</li>
+				</ul>
+				</div>
+				<div class="footer__column">
+				<h6 class="footer__column__title">
+						Contact
+				</h6>
+				<ul class="footer__column__content">
+					<li class="footer__item without-link">
+						Borongajska cesta bb,
+					</li>
+					<li class="footer__item without-link">
+						10000 Zagreb
+					</li>
+					<li class="footer__item">
+						<a href="tel:01 23 95 313" class="footer__link">
+							01 23 95 313
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="maito:hello@sparcle.co" class="footer__link footer__link_email">
+							hello@sparcle.co
+						</a>
+					</li>
+				</ul>
+				</div>
+			</div>
+			<div class="copyright">
+				Copyright Sparcle. Team d.o.o., <br>All Rights Reserved
+			</div>
+		</div>
+	</footer>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
