--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<main>
 		<section class="cleaning">
 			<div class="container">
-				<div class="cleaning__item">
+				<div class="cleaning__item _animate _animate-left">
 					<div class="cleaning-up">
 						<span class="cleaning__icon icon-house"></span>
 						<h3>
@@ -85,7 +85,7 @@
 					</div>
 					<a href="#" class="cleaning__btn">Book online now</a>
 				</div>
-				<div class="cleaning__item">
+				<div class="cleaning__item _animate _animate-right">
 					<div class="cleaning-up">
 						<span class="cleaning__icon icon-commercial"></span>
 						<h3>
@@ -101,12 +101,12 @@
 		</section>
 		<section class="way">
 			<div class="container">
-				<h2 class="way__title">A new way of cleaning</h2>
+				<h2 class="way__title _animate _anim-no-hide">A new way of cleaning</h2>
 				<div class="way__content">
-					<div class="way__content__column">
+					<div class="way__content__column _animate _animate-left _anim-no-hide">
 						<p>We clean to such a high level that you’ll never even need to use our unique re-clean guarantee! <u>This gives you peace of mind and saves you time.</u></p>
 					</div>
-					<div class="way__content__column">
+					<div class="way__content__column _animate _animate-right _anim-no-hide">
 						<p>We love house cleaning and want to share with you its many benefits. Having our house cleaning services is about having the utmost professional people in your home, people you can trust and count on.</p>
 						<p>When you choose Sparcle, you know you will be coming home with the peace of mind that only all natural cleaning products were used, making your home safe for your family, your pets and the planet.</p>
 					</div>
@@ -116,15 +116,15 @@
 		<section class="become">
 			<div class="container">
 				<div class="become__content">
-					<div class="become__img">
+					<div class="become__img _animate _animate-left _anim-no-hide">
 						<img src="img/become.jpg" alt="" class="become-img">
 					</div>
-					<h4 class="become__title">BECOME PART OF THE TEAM</h4>
-					<h2 class="become__subtitle">Professional cleaning service of the year</h2>
-					<div class="become__text">
+					<h4 class="become__title _animate _animate-left">BECOME PART OF THE TEAM</h4>
+					<h2 class="become__subtitle _animate _anim-no-hide">Professional cleaning service of the year</h2>
+					<div class="become__text _animate _animate-left">
 						At <span>Sparcle</span> our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
 					</div>
-					<ul class="become__advantages">
+					<ul class="become__advantages _animate _animate-left">
 						<li class="become__advantages__item">
 							Satisfaction guranteed
 						</li>
@@ -138,20 +138,20 @@
 		<form class="book">
 			<div class="container">
 				<div class="book__column">
-					<h4>Select your service</h4>
-					<h2>Book online</h2>
-					<div class="book__text">Choose the type of cleaning that suits you the most. After that you just have to specify number of rooms and you are good to go.</div>
+					<h4 class="_animate _animate-left">Select your service</h4>
+					<h2 class="_animate">Book online</h2>
+					<div class="book__text _animate _animate-left">Choose the type of cleaning that suits you the most. After that you just have to specify number of rooms and you are good to go.</div>
 					<div class="book__type">
 						<div class="type__text">Type of cleaning</div>
 						<div class="type__radio">
 							<input id="residential" name="typeOfCleaning" type="radio" value="residential" checked="checked">
-							<label for="residential">Residential</label>
+							<label for="residential" class="_animate _animate-left">Residential</label>
 							<input id="commercial" name="typeOfCleaning" type="radio" value="commercial">
-							<label for="commercial">Commercial</label>
+							<label for="commercial" class="_animate _animate-right">Commercial</label>
 						</div>
 					</div>
 					<div class="book__number">
-						<div class="number__item">
+						<div class="number__item _animate _animate-left">
 							<div class="number__text">Number of bedrooms</div>
 							<div class="number__input">
 							   <button class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
@@ -159,7 +159,7 @@
 	                     <button class="number__button" type="button" onclick="this.previousElementSibling.stepUp()">+</button>
 							</div>
 						</div>
-						<div class="number__item">
+						<div class="number__item _animate _animate-right">
 							<div class="number__text">Number of bathrooms</div>
 							<div class="number__input">
 							   <button id="1"class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
@@ -170,131 +170,199 @@
 					</div>
 				</div>
 				<div class="book__column">
-					<div class="book__numbers">
-						<h3 class="book__subtotal">Subtotal<span id="price">60.91</span>$</h3>
-						<div class="book__cleaning"><span id="typeOfCleaning">Residential</span> Cleaning - <span id="timeOfCleaning">2</span> <span id="hours">hours<span></div>
-						<div class="book__includes">includes: <span id="bedrooms">1</span> bedrooms, <span id="bathrooms">1</span> bathrooms</div>
+					<div class="book__numbers _animate _animate-right">
+						<h3 class="book__subtotal _animate _animate-right">Subtotal<span id="price">60.91</span>$</h3>
+						<div class="book__cleaning _animate _animate-right"><span id="typeOfCleaning">Residential</span> Cleaning - <span id="timeOfCleaning">2</span> <span id="hours">hours<span></div>
+						<div class="book__includes _animate _animate-right">includes: <span id="bedrooms">1</span> bedrooms, <span id="bathrooms">1</span> bathrooms</div>
 					</div>
 					<div class="book__user-contacts">
-						<p class="contacts__text">Your full name</p>
-						<input type="text" placeholder="Vid Kraljić Radulović" required>
-						<input type="tel" placeholder="Enter your phone number" required>
-						<input type="email" placeholder="Enter your email addresse" required>
+						<p class="contacts__text _animate">Your full name</p>
+						<input type="text" placeholder="Vid Kraljić Radulović" required class="_animate _animate-right">
+						<input type="tel" placeholder="Enter your phone number" required class="_animate _animate-right">
+						<input type="email" placeholder="Enter your email addresse" required class="_animate _animate-right">
 					</div>
-					<button type="submit" class="book__submit">Continue Booking</button>
+					<button type="submit" class="book__submit _animate _animate-right">Continue Booking</button>
 				</div>
 			</div>
 		</form>
-
-
-		<section class="feedback">
+		<section class="testimonials">
 			<div class="container">
-				<div class="feedback__title">Your questions and comments are important to us.</div>
-				<div class="feedback__btns">
-					<a href="#" class="btn feedback__btn">Call our service</a>
-					<a href="#" class="btn feedback__btn">Email us</a>
+				<div class="container">
+					<h2 class="testimonials__title">What our customers say</h2>
+				</div>
+				<div class="testimonials__slider">
+					<div class="testimonial">
+						<div class="testimonial__img">
+							<img src="img/testimonial1.png" alt="" class="testimonial-img">
+						</div>
+						<p class="testimonial__text">
+							“There is no better feeling than walking into a super clean home, and knowing that someone else took time to do it :)”
+						</p>
+						<div class="testimonial__author">
+							<div class="author__name">Paula Radanović</div>
+							<div class="author__city">Zagreb</div>
+						</div>
+					</div>
+					<div class="testimonial">
+						<div class="testimonial__img">
+							<img src="img/testimonial2.png" alt="" class="testimonial-img">
+						</div>
+						<p class="testimonial__text">
+							“Super fast hard workers! Polite and friendly! Highly recommend the odd jobers if you need a job done fast and done right!”
+						</p>
+						<div class="testimonial__author">
+							<div class="author__name">Kristina Rašić</div>
+							<div class="author__city">Samobor</div>
+						</div>
+					</div>
+					<div class="testimonial">
+						<div class="testimonial__img">
+							<img src="img/testimonial3.png" alt="" class="testimonial-img">
+						</div>
+						<p class="testimonial__text">
+							“They absolutely make my life better! So professional and organized. They have a checklist for what is cleaned so that you know that it will be the same deep, thorough cleaning every time. 
+						</p>
+						<div class="testimonial__author">
+							<div class="author__name">Anamarija Benković</div>
+							<div class="author__city">Osijek</div>
+							</div>
+					</div>
+
+
+					<div class="testimonial">
+						<div class="testimonial__img">
+							<img src="img/testimonial1.png" alt="" class="testimonial-img">
+						</div>	
+						<p class="testimonial__text">
+							“There is no better feeling than walking into a super clean home, and knowing that someone else took time to do it :)”
+						</p>
+						<div class="testimonial__author">
+							<div class="author__name">Paula Radanović</div>
+							<div class="author__city">Zagreb</div>
+						</div>
+					</div>	
+										<div class="testimonial">
+						<div class="testimonial__img">
+							<img src="img/testimonial3.png" alt="" class="testimonial-img">
+						</div>
+						<p class="testimonial__text">
+							“They absolutely make my life better! So professional and organized. They have a checklist for what is cleaned so that you know that it will be the same deep, thorough cleaning every time. 
+						</p>
+						<div class="testimonial__author">
+							<div class="author__name">Anamarija Benković</div>
+							<div class="author__city">Osijek</div>
+							</div>
+					</div>				
 				</div>
 			</div>
 		</section>
-
+		<section class="feedback">
+			<div class="container">
+				<div class="feedback__title _animate _anim-no-hide">Your questions and comments are important to us.</div>
+				<div class="feedback__btns">
+					<a href="#" class="btn feedback__btn _animate _animate-left">Call our service</a>
+					<a href="#" class="btn feedback__btn _animate _animate-right">Email us</a>
+				</div>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<div class="container">
 			<div class="column__container">
-				<div class="footer__column">
-				<h2 class="footer__column__title"><a href="#" class="footer__title__link">Sparcle.</a></h2>
-				<ul class="footer__column__content no-animate">
-					<li class="footer__item without-link">
-						Enjoy a better cleaning
-					</li>
-					<li class="footer__item without-link">
-						experience with us.
-					</li>
-					<li class="footer__item footer__item_social">
-						<ul class="social">
-							<li><a href="social__link"><img src="img/f.png" alt=""></a></li>
-							<li><a href="social__link"><img src="img/t.png" alt=""></a></li>
-							<li><a href="social__link"><img src="img/in.png" alt=""></a></li>
-						</ul>
-					</li>
-				</ul>
+				<div class="footer__column _left-anim">
+					<h2 class="footer__column__title"><a href="#" class="footer__title__link">Sparcle.</a></h2>
+					<ul class="footer__column__content no-animate">
+						<li class="footer__item without-link">
+							Enjoy a better cleaning
+						</li>
+						<li class="footer__item without-link">
+							experience with us.
+						</li>
+						<li class="footer__item footer__item_social">
+							<ul class="social">
+								<li><a href="social__link"><img src="img/f.png" alt=""></a></li>
+								<li><a href="social__link"><img src="img/t.png" alt=""></a></li>
+								<li><a href="social__link"><img src="img/in.png" alt=""></a></li>
+							</ul>
+						</li>
+					</ul>
 				</div>
-				<div class="footer__column">
-				<h6 class="footer__column__title">
-						House
-				</h6>
-				<ul class="footer__column__content">
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							What’s Included
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Speciality Cleaning
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Deep Cleaning
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Careers
-						</a>
-					</li>
-				</ul>
+				<div class="footer__column _left-anim">
+					<h6 class="footer__column__title">
+							House
+					</h6>
+					<ul class="footer__column__content">
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								What’s Included
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Speciality Cleaning
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Deep Cleaning
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Careers
+							</a>
+						</li>
+					</ul>
 				</div>
-				<div class="footer__column">
-				<h6 class="footer__column__title">
-						Commercial
-				</h6>
-				<ul class="footer__column__content">
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Green Cleaning
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Secure Daytime Cleaning
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Apartment Cleaning
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="#" class="footer__link">
-							Event Cleaning
-						</a>
-					</li>
-				</ul>
+				<div class="footer__column _right-anim">
+					<h6 class="footer__column__title">
+							Commercial
+					</h6>
+					<ul class="footer__column__content">
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Green Cleaning
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Secure Daytime Cleaning
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Apartment Cleaning
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="#" class="footer__link">
+								Event Cleaning
+							</a>
+						</li>
+					</ul>
 				</div>
-				<div class="footer__column">
-				<h6 class="footer__column__title">
-						Contact
-				</h6>
-				<ul class="footer__column__content">
-					<li class="footer__item without-link">
-						Borongajska cesta bb,
-					</li>
-					<li class="footer__item without-link">
-						10000 Zagreb
-					</li>
-					<li class="footer__item">
-						<a href="tel:01 23 95 313" class="footer__link">
-							01 23 95 313
-						</a>
-					</li>
-					<li class="footer__item">
-						<a href="maito:hello@sparcle.co" class="footer__link footer__link_email">
-							hello@sparcle.co
-						</a>
-					</li>
-				</ul>
+				<div class="footer__column _right-anim">
+					<h6 class="footer__column__title">
+							Contact
+					</h6>
+					<ul class="footer__column__content">
+						<li class="footer__item without-link">
+							Borongajska cesta bb,
+						</li>
+						<li class="footer__item without-link">
+							10000 Zagreb
+						</li>
+						<li class="footer__item">
+							<a href="tel:01 23 95 313" class="footer__link">
+								01 23 95 313
+							</a>
+						</li>
+						<li class="footer__item">
+							<a href="maito:hello@sparcle.co" class="footer__link footer__link_email">
+								hello@sparcle.co
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="copyright">
@@ -303,6 +371,7 @@
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
