--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					Get started
 				</a>
 				<a href="#" class="btn locations-btn">
-					<i class="fas fa-map-marker-alt pin"></i>Locations
+					<span class="icon-map-marker-alt"></span> Locations
 				</a>
 			</div>
 			<a href="#" class="learn">
@@ -62,7 +62,7 @@
 				</p>
 				<div class="learn__line"></div>
 				<div class="learn__circle">
-					<i class="fas fa-chevron-right learn__arrow"></i>
+					<span class="icon-arrow"></span>
 				</div>
 			</a>
 			<div class="scroll">
@@ -97,7 +97,7 @@
 					</div>
 					<a href="#" class="cleaning__btn">Get a quote</a>
 				</div>
-			</div>
+			</div>		
 		</section>
 		<section class="way">
 			<div class="container">
@@ -124,11 +124,11 @@
 					<div class="become__text _animate _animate-left">
 						At <span>Sparcle</span> our entire philosophy is based on hiring warm people, not warm bodies. We know that you only want the best.
 					</div>
-					<ul class="become__advantages _animate _animate-left">
-						<li class="become__advantages__item">
+					<ul class="become__advantages">
+						<li class="become__advantages__item _animate _animate-left">
 							Satisfaction guranteed
 						</li>
-						<li class="become__advantages__item">
+						<li class="become__advantages__item _animate _animate-left">
 							Above average incomes
 						</li>
 					</ul>
