--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					Get started
 				</a>
 				<a href="#" class="btn locations-btn">
-					<span class="icon-map-marker-alt"></span> Locations
+					Locations
 				</a>
 			</div>
 			<a href="#" class="learn">
