--- a/index.html
+++ b/index.html
@@ -372,6 +372,14 @@
 	</footer>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<!-- the jScrollPane script -->
+	<script src="jquery.jscrollpane.min.js"></script>
+
+	<script>
+	    $(document).ready(function () {
+	        $('body').jScrollPane();
+	    };
+	</script>
 	<script src="js/main.js"></script>
 </body>
 </html>
