--- a/index.html
+++ b/index.html
@@ -373,13 +373,13 @@
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<!-- the jScrollPane script -->
-	<script src="jquery.jscrollpane.min.js"></script>
+<!-- 	<script src="jquery.jscrollpane.min.js"></script>
 
 	<script>
 	    $(document).ready(function () {
 	        $('body').jScrollPane();
-	    };
-	</script>
+	    });
+	</script> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
