--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
   			  <span></span>
   			</label>
-				<a href="#" class="logo">
+				<a href="#" class="logo _animate _animate-left">
 					<img src="img/logo.png" alt="sparcle" class="logo__img">
 				</a>
 				
 				<nav>
-					<ul class="nav__list">
+					<ul class="nav__list _animate _animate-top">
 						<li class="nav__item">
 							<a href="#" class="nav__link">Our services</a>
 						</li>
@@ -40,9 +40,9 @@
 						</li>
 					</ul>
 				</nav>
-				<a href="#" class="btn btn-request">Request a Quote</a>
+				<a href="#" class="btn btn-request _animate _animate-right">Request a Quote</a>
 			</div>
-			<div class="offer">
+			<div class="offer _animate _animate-left">
 				<h1>Professional cleaning
 					services
 				</h1>
@@ -56,7 +56,7 @@
 					Locations
 				</a>
 			</div>
-			<a href="#" class="learn">
+			<a href="#" class="learn _animate _animate-left">
 				<p class="learn__text">
 					learn more
 				</p>
@@ -372,14 +372,6 @@
 	</footer>
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
-	<!-- the jScrollPane script -->
-<!-- 	<script src="jquery.jscrollpane.min.js"></script>
-
-	<script>
-	    $(document).ready(function () {
-	        $('body').jScrollPane();
-	    });
-	</script> -->
 	<script src="js/main.js"></script>
 </body>
 </html>
