--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Sparcle</title>
 </head>
 <body>
-	<header>
+	<header class="_animate">
 		<div class="container">
 			
 			<div class="head">
