--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Sparcle</title>
 </head>
 <body>
+	<div class="layer0 _animate _anim-no-hide"></div>
 	<header>
 		<div class="container">
 			
