--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 						<div class="number__item _animate _animate-right">
 							<div class="number__text">Number of bathrooms</div>
 							<div class="number__input">
-							   <button id="1"class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
+							   <button class="number__button" type="button" onclick="this.nextElementSibling.stepDown()">-</button>
 	                     <input id="count-bathrooms" name="bathrooms" type="number" min="0" value="1">
-	                     <button id="1"class="number__button" type="button" onclick="this.previousElementSibling.stepUp()">+</button>
+	                     <button class="number__button" type="button" onclick="this.previousElementSibling.stepUp()">+</button>
 							</div>
 						</div>
 					</div>
